products/yappc/frontend/apps/api/seed_output_2.txt
npm warn Unknown project config "shamefully-hoist". This will stop working in the next major version of npm.
npm warn Unknown project config "strict-peer-dependencies". This will stop working in the next major version of npm.
npm warn Unknown project config "auto-install-peers". This will stop working in the next major version of npm.
npm warn Unknown project config "lockfile". This will stop working in the next major version of npm.
npm warn Unknown project config "prefer-frozen-lockfile". This will stop working in the next major version of npm.
/home/samujjwal/Developments/ghatana/products/yappc/app-creator/apps/api/prisma/seed.ts:10
import { PrismaClient, Role, ItemType, ItemPriority, ItemStatus, InsightType, InsightSeverity, InsightStatus } from '@prisma/client';
                                                                              ^
SyntaxError: The requested module '@prisma/client' does not provide an export named 'InsightSeverity'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:691:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.10.0
